CompatHelper: bump compat for StridedViews to 0.4 for package NDTensors, (keep existing compat)

--- a/NDTensors/Project.toml
+++ b/NDTensors/Project.toml
@@ -86,7 +86,7 @@ SparseArrays = "<0.0.1, 1.10"
 SplitApplyCombine = "1.2.2"
 StaticArrays = "0.12, 1.0"
 Strided = "2"
-StridedViews = "0.2.2, 0.3"
+StridedViews = "0.2.2, 0.3, 0.4"
 TBLIS = "0.2"
 TimerOutputs = "0.5.5"
 TupleTools = "1.2.0"
